Added Styling and JS file to handle events

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <select name="todos" class="filter-todo">
                 <option value="all">All</option>
                 <option value="completed">Completed</option>
-                <option value="uncompleted">Uncompleted</option>
+                <option value="inprogress">In Progress</option>
             </select>
         </div>
         <button class="time-sort-btn"> Sort by time</button>
